# speckitplus-book

./: package.json  tasks.md  vercel.json
.claude/skills/module-content-writer/: SKILL.md
.claude/skills/spec-writer/: SKILL.md
.claude/skills/task-creator/: SKILL.md
.specify/memory/: constitution.md
history/prompts/general/: 0001-clarification-of-physical-ai-robotics-textbook-spec.general.prompt.md  0001-clarifying-work-cessation.general.prompt.md  0002-recording-ai-exchange-as-phr.general.prompt.md  0004-create-rag-chatbot-specification.general.prompt.md  0005-create-rag-chatbot-plan.general.prompt.md
history/prompts/physical-ai-robotics-textbook/: 0001-created-structural-specification-for-physical-ai-humanoid-robotics-textbook.spec.prompt.md
my-website/: docusaurus.config.ts  package-lock.json
my-website/code_examples/module-01-ros2/ros2_fundamentals/: package.xml  setup.cfg  setup.py
my-website/code_examples/module-01-ros2/ros2_fundamentals/ros2_fundamentals/: simple_action_client.py  simple_action_server.py  simple_publisher.py  simple_service_client.py  simple_service_server.py
my-website/code_examples/module-02-unity/: README.md
my-website/code_examples/module-03-isaac/: README.md
my-website/docs/01-ros2-system/: 01-intro.md  02-topics.md  03-services.md  04-actions.md  (+2 more)
specs/: plan.md
specs/001-ros2-module/: spec.md
specs/002-ros2-module/: spec.md
specs/003-ros2-module/: spec.md
specs/004-ros2-module/: spec.md
specs/physical-ai-robotics-textbook/: spec.md
specs/rag_architect/: data-model.md  plan.md  quickstart.md  spec.md
(+35 files in other folders)
